Fixed stretched social icons on some browsers

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -89,6 +89,7 @@ header
 #header-content ul img
 {
 	height: 80px;
+        width: 80px;
 	padding: 0 5px;
 	opacity: .9;
 }
